# Hamlib

./: README  configure.ac
include/hamlib/: rig.h  riglist.h
rigs/sdrangel/: CONFIGURE_HAMLIB_SDRANGEL_HACKRF  CONFIGURE_HAMLIB_SDRANGEL_LIME  CONFIGURE_HAMLIB_SDRANGEL_PLUTO  CONFIGURE_HAMLIB_SDRANGEL_RTLSDR  Makefile.am  README_SDRANGEL.txt  n  relay.c  relay_drv.h  sdrangel.c  sdrangel.h  sdrangel_hackrf.c  sdrangel_hackrf.h  sdrangel_pluto.c  sdrangel_pluto.h  sdrangel_rtlsdr.c  sdrangel_rtlsdr.h
src/: register.c  rig.c
test_git/: temp
